--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Good Clean Read
-tag_text: Good Clean Read
+title: Mahalo! Good Clean Read
+tag_text: Mahalo! Good Clean Read
 description: A responsive template for publishing single-page websites, articles that are easy on the eyes
-url: "http://127.0.0.1:4000"
+url: "https://mahaloito.github.io"
 baseurl: ""
 
 font-awesome-include: true # make this false if you don't need font-awesome
@@ -10,4 +10,4 @@ font-awesome-include: true # make this false if you don't need font-awesome
 # Build settings
 markdown: kramdown
 
-exclude: ["README.md"]
+#exclude: ["README.md"]
